# fast-mkv-parser

./: README.md  pyproject.toml
src/fast_mkv_parser/: __init__.py  cli.py  ebml.py  extractor.py  matroska.py  writers.py
tests/: test_batched_io.py  test_ebml.py  test_matroska.py
